repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_latest_versions__missing_extension.snap
---
source: repology-webapp/tests/snapshot_tests/badge_latest_versions.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 404
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
---
